# realtime-transcriber

./: LICENSE  README.md  pyproject.toml
scripts/: bench_translate.py
src/realtime_transcriber/: audio.py  main.py  session_logger.py  summarizer.py  transcriber.py  translator.py
tests/: test_audio.py  test_main.py  test_transcriber.py  test_translator.py
