[project]
name = "realtime-transcriber"
version = "0.1.0"
description = "BlackHole 2ch経由のシステム音声をMLX-Whisperでリアルタイム文字起こしするCLIツール"
requires-python = ">=3.11,<3.14"
dependencies = [
    "sounddevice",
    "mlx-whisper",
    "numpy",
    "ollama",
    "boto3",
    "silero-vad-lite",
]

[project.scripts]
realtime-transcriber = "realtime_transcriber.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/realtime_transcriber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = ["pytest"]
